--- a/myblog/config.yaml
+++ b/myblog/config.yaml
@@ -1,42 +1,40 @@
-baseurl: /
-languageCode: en-us
-title: Soliton Gases
-theme: hugo-lithium
-googleAnalytics: ''
-disqusShortname: ''
-ignoreFiles:
-  - \.Rmd$
-  - \.Rmarkdown$
-  - _cache$
-  - \.knit\.md$
-  - \.utf8\.md$
+baseurl: "/"
+languageCode: "en-us"
+title: "Soliton Gases"
+theme: "hugo-xmin"
+googleAnalytics: ""
+disqusShortname: ""
+ignoreFiles: ["\\.Rmd$", "\\.Rmarkdown$", "_cache$", "\\.knit\\.md$", "\\.utf8\\.md$"]
+footnotereturnlinkcontents: "↩"
+
 permalinks:
-  post: /:year/:month/:day/:slug/
+  note: "/note/:year/:month/:day/:slug/"
+  post: "/post/:year/:month/:day/:slug/"
+
 menu:
   main:
+    - name: Home
+      url: ""
+      weight: 1
     - name: About
-      url: /about/
-    - name: GitHub
-      url: https://github.com/solitongas
+      url: "about/"
+      weight: 2
+    - name: Categories
+      url: "categories/"
+      weight: 3
+    - name: Tags
+      url: "tags/"
+      weight: 4
+    - name: Subscribe
+      url: "index.xml"
 
 params:
-  MathJaxCDN: //cdnjs.cloudflare.com/ajax/libs
-  MathJaxVersion: 2.7.5
-  description: A website built through Hugo and blogdown.
-  favicon: favicon.ico
-  highlightjsCDN: //cdnjs.cloudflare.com/ajax/libs
-  highlightjsLang:
-    - r
-    - yaml
-  highlightjsTheme: github
-  highlightjsVersion: 9.12.0
-  logo:
-    alt: Logo
-    height: 50
-    url: logo.png
-    width: 50
+  description: "A website built through Hugo and blogdown."
+  footer: "&copy; [Fudong Wang](https://yihui.org) 2022 -- {Year} | [Github](https://github.com/solitongas) "
+
 markup:
-  defaultMarkdownHandler: goldmark
+  highlight:
+    codeFences: false
   goldmark:
     renderer:
-      unsafe: yes
+      unsafe: true
