--- a/myblog/config/_default/params.yaml
+++ b/myblog/config/_default/params.yaml
@@ -5,10 +5,10 @@
 
 # Appearance
 
-theme: minimal
+theme: forest
 day_night: true
 font: ''
-font_size: L
+font_size: m 
 
 # SEO
 
@@ -123,7 +123,7 @@ breadcrumb:
   page_types:
     book: true
 comments:
-  provider: ''
+  provider: 'disqus'
   commentable:
     post: true
     book: true
@@ -131,7 +131,7 @@ comments:
     publication: true
     event: true
   disqus:
-    shortname: ''
+    shortname: 'solitongas'
     show_count: true
   commento:
     url: ''
